--- a/package.json
+++ b/package.json
@@ -3,54 +3,38 @@
   "version": "1.0.1",
   "description": "Create Material",
   "scripts": {
-    "start": "cross-env NODE_ENV=development webpack serve",
-    "build": "cross-env NODE_ENV=production webpack --mode=production --env production"
+    "start": "cross-env NODE_ENV=development webpack-dev-server --config webpack.dev.js",
+    "build": "cross-env NODE_ENV=production webpack --config webpack.prod.js"
   },
   "devDependencies": {
-    "@babel/core": "7.18.5",
-    "@babel/plugin-transform-runtime": "7.18.5",
-    "@babel/preset-env": "7.18.2",
-    "@types/pubsub-js": "^1.8.3",
-    "@types/react": "18.0.14",
-    "@types/react-dom": "18.0.5",
-    "@types/react-router-dom": "5.3.3",
-    "@types/react-transition-group": "4.4.5",
-    "@types/webpack-env": "^1.18.0",
-    "@typescript-eslint/eslint-plugin": "5.29.0",
-    "@typescript-eslint/parser": "5.29.0",
-    "babel-loader": "8.2.5",
+    "@babel/core": "^7.18.2",
+    "@babel/plugin-transform-runtime": "^7.18.5",
+    "@babel/preset-env": "^7.18.2",
+    "@types/react": "^18.0.12",
+    "@types/react-dom": "^18.0.5",
+    "babel-loader": "^8.2.5",
     "babel-preset-react-app": "^10.0.1",
-    "clean-webpack-plugin": "4.0.0",
+    "copy-webpack-plugin": "^11.0.0",
+    "core-js": "^3.23.0",
     "cross-env": "^7.0.3",
-    "css-loader": "6.7.1",
-    "eslint": "8.18.0",
-    "file-loader": "6.2.0",
-    "html-webpack-plugin": "5.5.0",
-    "less": "4.1.3",
-    "less-loader": "11.0.0",
-    "mini-css-extract-plugin": "2.6.1",
-    "prettier": "2.7.1",
-    "style-loader": "3.3.1",
-    "ts-loader": "9.3.0",
-    "typescript": "4.7.4",
-    "typescript-plugin-css-modules": "3.4.0",
-    "url-loader": "^4.1.1",
-    "webpack": "5.73.0",
-    "webpack-cli": "4.10.0",
-    "webpack-dev-server": "4.9.2"
+    "css-loader": "^6.7.1",
+    "html-webpack-plugin": "^5.5.0",
+    "less": "^4.1.3",
+    "less-loader": "^11.0.0",
+    "mini-css-extract-plugin": "^2.6.1",
+    "portfinder": "^1.0.32",
+    "postcss": "^8.4.14",
+    "postcss-loader": "^7.0.0",
+    "style-loader": "^3.3.1",
+    "typescript": "^4.7.3",
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.9.1",
+    "webpack-merge": "^5.8.0"
   },
   "dependencies": {
-    "axios": "0.27.2",
-    "classnames": "2.3.1",
-    "dayjs": "1.11.3",
-    "pubsub-js": "^1.9.4",
-    "qnn-react-cron": "^1.0.3",
-    "query-string": "^6.13.7",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-redux": "8.0.2",
-    "react-router-dom": "6.3.0",
-    "redux": "4.2.0"
+    "react-dom": "^16.13.1"
   },
   "main": "webpack.config.js",
   "keywords": [],
